--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^3.4.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "ws": "^7.2.1"
   },
   "devDependencies": {
     "vue": "^2.6.11"
